--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.5)
 
 set(CMAKE_C_STANDARD 99)
 set(C_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_STANDARD 11)
+set(CXX_STANDARD_REQUIRED ON)
 
 option(BUILD_TESTING "Enable test (depends on googletest)." OFF)
 option(BUILD_VALGRIND "Enable valgrind (depends on BUILD_TESTING)." OFF)
